# tracealyzer_burn_trial

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
app_traceburn/: CMakeLists.txt
app_traceburn/src/: config.xscope  main_tile0.c  main_tile1.c
app_traceburn/src/config_app/: app_conf.h
app_traceburn/src/config_rtos/: FreeRTOSConfig.h
app_traceburn/src/tile_common/: tile_common.c  tile_common.h
modules/: CMakeLists.txt
modules/bsp/: CMakeLists.txt
modules/bsp/XK_VOICE_L71/: CMakeLists.txt  XK_VOICE_L71.xn
modules/bsp/XK_VOICE_L71/platform/: driver_instances.h  platform_init.c  platform_start.c
tools/py/: tracelog2activity.py
